--- a/client/main.css
+++ b/client/main.css
@@ -58,7 +58,7 @@ a .hover-tip {
   padding: 6px 8px;
   border: 1px solid #fff;
   opacity: 0;
-  transition: width 0.01s, opacity 0.5s  ease-in-out, right 0.5s ease-in-out;
+  transition: z-index 0.6s, opacity 0.5s  ease-in-out, right 0.5s ease-in-out;
   z-index: -1;
 }
 
