User errors and login/logout working

--- a/client/main.css
+++ b/client/main.css
@@ -92,3 +92,10 @@ a:hover .hover-tip {
   font-size: 16px;
   margin: 16px 0;
 }
+
+.user-management .error-message {
+  border: 1px solid #d99;
+  background-color: #ecc;
+  padding: 8px;
+  font-weight: bold;
+}
