--- a/client/main.css
+++ b/client/main.css
@@ -10,6 +10,24 @@ main {
   padding: 24px;
 }
 
+
+.col {
+    display: inline-block;
+    vertical-align: top;
+    padding: 12px;
+    box-sizing: border-box;
+    overflow-x: hidden;
+}
+
+.col h1 {
+  margin-top: 0;
+  padding-top: 0;
+}
+
+.half {
+  width: 50%;
+}
+
 /*NAV*/
 
 nav {
@@ -136,4 +154,36 @@ form.search-form input {
 .result-module:hover {
   color: #444;
   background-color: #ddd;
+}
+
+/*DETAIL-PAGE*/
+.detail-page img {
+  max-width: 640px;
+  float:left;
+}
+
+/*DATA-TABLE*/
+.data-table td {
+  border:1px solid #CCC;
+  padding: 6px;
+  color: #444;
+
+}
+
+.data-table {
+  width: 100%;
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
+.data-table td.icon-td {
+  width: 24px;
+  height: 24px;
+  vertical-align: middle;
+  text-align: center;
+}
+
+.data-table td.label-td {
+  font-weight: bold;
+  max-width: 72px;
 }
