--- a/client/main.css
+++ b/client/main.css
@@ -207,6 +207,33 @@ form.search-form input {
   width: 32px;
 }
 
+/*PLANT-LIST*/
+ul.plant-list {
+  padding-left: 0;
+
+}
+
+ul.plant-list li {
+  list-style-type: none;
+  margin-left: 0;
+}
+
+ul.plant-list li div.plant-entry {
+  border: 1px solid #444;
+  padding: 6px 24px;
+}
+
+div.plant-entry h3 {
+  width: 50%;
+  display: inline-block;
+}
+
+div.plant-entry-controls {
+  width: 50%;
+  display: inline-block;
+  text-align: right;
+}
+
 /*LOADING-SPINNER*/
 .spinner-holder {
     position: absolute;
