--- a/client/main.css
+++ b/client/main.css
@@ -90,16 +90,18 @@ a:hover .hover-tip {
 
 
 /*NOTIFICATIONS*/
-.notifications-holder .notifications-indicator{
+.notifications-indicator{
   background-color: #e11;
   font-weight: bold;
   display: block;
   width: 16px;
   height: 16px;
   text-align: center;
+  color: #fff;
+  font-size: 16px;
   position: absolute;
   padding: 4px;
-  top: 4px;
+  top: 2px;
   right: 0;
   border-radius: 50%;
 }
@@ -220,7 +222,8 @@ ul.plant-list li {
 
 ul.plant-list li div.plant-entry {
   border: 1px solid #444;
-  padding: 6px 24px;
+  padding: 0 24px;
+  background-color: #ddd;
 }
 
 div.plant-entry h3 {
@@ -229,9 +232,23 @@ div.plant-entry h3 {
 }
 
 div.plant-entry-controls {
-  width: 50%;
+  width: auto;
   display: inline-block;
   text-align: right;
+  border-left: 1px solid #444;
+  padding: 6px 12px;
+  float: right;
+}
+
+div.plant-entry-controls button {
+  width: 48px;
+  height: 48px;
+  padding: 6px;
+  border-radius: 50%;
+  background-color: #fff;
+  margin-right: 4px;
+  font-size: 20px;
+  position: relative;
 }
 
 /*LOADING-SPINNER*/
