--- a/client/main.css
+++ b/client/main.css
@@ -89,6 +89,18 @@ a:hover .hover-tip, button:hover .hover-tip {
 
 }
 
+/*MODAL*/
+.modal-holder {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  z-index: -1;
+}
+
+.modal-holder.active {
+  z-index: 1;
+}
+
 
 /*NOTIFICATIONS*/
 .notifications-indicator{
