--- a/client/main.css
+++ b/client/main.css
@@ -15,6 +15,16 @@ a {
   position: relative;
 }
 
+.container.popped-up {
+  background-color: #fff;
+  z-index: 4;
+  box-shadow: -1px 1px 5px rgba(0, 0, 0, 0.5);
+}
+
+.container.dropped {
+  margin-top: 256px;
+}
+
 main {
 }
 
@@ -36,6 +46,8 @@ main {
   width: 50%;
 }
 
+
+
 /*NAV*/
 
 nav {
@@ -43,6 +55,9 @@ nav {
   width: 100%;
   background-color: #1e2019 ;
   box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.5);
+  z-index: 5;
+  position: fixed;
+  top: 0;
 }
 
 nav a {
@@ -159,10 +174,11 @@ p.error-message {
   height: 100%;
   position: absolute;
   z-index: -5;
+  top:0;
 }
 
 .modal-holder.active {
-  z-index: 1;
+  z-index: 6;
 }
 
 .modal-holder.active .modal-background {
@@ -218,6 +234,35 @@ p.error-message {
   top: 2px;
   right: 0;
   border-radius: 50%;
+}
+
+
+/*SEARCH PAGE*/
+.background-image-header {
+  position: absolute;
+  width: 100vw;
+  z-index: -1;
+  top: 0;
+  max-height: 480px;
+  overflow:hidden;
+}
+
+.background-image-header img {
+  width: 100vw;
+}
+
+.search-form-container {
+  margin-top: -64px;
+  background-color: #fff;
+  max-width: 1024px;
+  box-shadow: -1px 1px 5px rgba(0, 0, 0, 0.5);
+  padding: 24px;
+  margin-bottom: 24px;
+
+}
+
+.search-form-container h4 {
+  margin-top: 0;
 }
 
 /*FORMS*/
