--- a/client/main.css
+++ b/client/main.css
@@ -213,7 +213,7 @@ p.error-message {
   min-height: 128px;
   position: absolute;
   top: calc(50% - 256px);
-  left: calc(50% - 128px);
+  left: calc(50% - 240px);
   background-color: #fff;
   border: 2px solid #689689;
   padding: 0;
@@ -257,6 +257,9 @@ p.error-message {
   border-radius: 50%;
 }
 
+.notifications-scroll {
+  
+}
 
 /*SEARCH PAGE*/
 .background-image-header {
