--- a/client/main.css
+++ b/client/main.css
@@ -257,6 +257,10 @@ p.error-message {
   border-radius: 50%;
 }
 
+.notifications-indicator.overflow {
+  font-size: 12px;
+}
+
 .notifications-scroll {
   overflow-y: scroll;
   height: 480px;
@@ -271,6 +275,7 @@ p.error-message {
   padding: 12px;
   border: 1px solid #83e8ba;
   margin-left: 0;
+  margin-bottom: 4px;
 }
 
 /*SEARCH PAGE*/
