Work on garden list

--- a/client/main.css
+++ b/client/main.css
@@ -632,6 +632,7 @@ div.plant-entry-controls button {
   border-width: 0;
   font-size: 18px;
   position: relative;
+  cursor: pointer;
 }
 
 /*LOADING-SPINNER*/
